--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pm-react",
-  "version": "1.4.1",
+  "version": "1.4.5",
   "description": "frontend built by React and PrimeReact",
   "private": true,
   "dependencies": {
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "REACT_APP_STAGE=prod react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
