--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "pm-react",
-  "version": "1.4.7",
+  "version": "1.4.9",
   "description": "frontend built by React and PrimeReact",
   "private": true,
+  "homepage": "/pm-react",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -16,7 +17,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.14.0",
     "react-number-format": "^4.7.3",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
     "web-vitals": "^1.1.2"
