--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "pm-react",
-  "version": "1.4.9",
-  "description": "frontend built by React and PrimeReact",
+  "version": "1.5.1",
+  "description": "pm front-end built with React and PrimeReact",
   "private": true,
   "homepage": "/pm-react",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
+    "axios": "^0.21.3",
     "crypto-js": "^4.1.1",
     "primeflex": "^3.0.1",
     "primeicons": "^4.1.0",
     "primereact": "^6.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.14.0",
+    "react-hook-form": "^7.14.2",
     "react-number-format": "^4.7.3",
-    "react-router-dom": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
     "web-vitals": "^1.1.2"
