--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
   "name": "pm-react",
-  "version": "1.5.2",
+  "version": "2.0.0",
   "description": "pm front-end built with React and PrimeReact",
   "private": true,
   "homepage": "/pm-react",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.3",
-    "primeflex": "^3.0.1",
-    "primeicons": "^4.1.0",
-    "primereact": "^6.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.14.2",
-    "react-number-format": "^4.7.3",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
-    "react-transition-group": "^4.4.2",
-    "web-vitals": "^1.1.2"
+    "axios": "^1.3.2",
+    "primeflex": "^3.3.0",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.1",
+    "react-number-format": "^5.1.3",
+    "react-router-dom": "^6.8.1",
+    "react-transition-group": "^4.4.5",
+    "web-vitals": "^3.1.1"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "react-scripts": "5.0.1"
+  },
+  "overrides": {
+    "nth-check": "2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
